[package]
name = "dioxus-resize-observer"
version = "0.3.0-alpha.3"
edition = "2021"
license = "MIT"
description = "Resize observer hooks for Dioxus."
repository = "https://github.com/dioxus-community/dioxus-resize-observer"

[dependencies]
dioxus = "0.6.0-alpha.2"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.69", features = ["Element", "DomRectReadOnly", "ResizeObserver", "ResizeObserverEntry"] }
dioxus-use-mounted = "0.3.0-alpha.3"

[dev-dependencies]
dioxus-web = "0.6.0-alpha.2"
